<resources>
    <string name="app_name">GameCrush</string>

    <!--Main activity-->

    <string name="btnLogin">Iniciar sesión</string>
    <string name="btnRegistro">Registrarme</string>

    <!--Actividad registro-->

    <string name="emailUsuario">Email</string>
    <string name="passwordUsuario">Introduce una contraseña</string>
    <string name="nombreUsuario">Introduce tu nombre</string>
    <string name="fechaRegistro">Fecha</string>
    <string name="textoBotonRegistro">Registrarme</string>

    <!--Actividad login-->
    <string name="emailLogin">Correo electrónico</string>
    <string name="passwordLogin">Contraseña</string>
    <string name="botonLogin">Iniciar sesión</string>
    <string name="passwordOlvidada">¿Has olvidado tu contraseña?</string>
    <!--Actividad password olvidada-->

    <string name="botonPasswordOlvidada">RECUPERAR</string>
    <string name="textViewPasswordOlvidada">Recuperación de contraseña</string>
    <string name="hintPasswordOlvidada">Introduce tu correo electrónico</string>
    <!--Menu-->
    <string name="puntuacion">Puntuación</string>
    <string name="cantidadZombies"> --</string>
    <string name="uid"> -- </string>
    <string name="textoMenu">Menú</string>
    <string name="nombreUsuarioMenu"> -- </string>
    <!-- Botones-->
    <string name="btnCerrarSesion">Cerrar sesión</string>
    <string name="btnJugar">Jugar</string>
    <string name="btnPuntuaciones">Ver puntuaciones</string>
    <string name="btnAcercaDe">Acerca de</string>

    <!--Zombie Killer-->
    <string name="contadorZombies">---</string>
    <string name="nombreJugador"> --- </string>
    <string name="tiempoRestante">0</string>

    <!--Partida perdida Zombie Killer-->
    <string name="textoPartidaPerdidaZombies">¡Partida finalizada!</string>
    <string name="textoJuegoZombies">Has asesinado </string>
    <string name="volverAJugar">Reintentar</string>
    <string name="verPuntuaciones">Puntuaciones</string>
    <string name="volverMenuPrincipal">Menu principal</string>
    <string name="acercaDeZombieKiller">Primer juego desarrollado por el equipo de GameCrush. El objetivo del juego es matar a la máxima
    cantidad de zombies... ¿o no? Si quieres sabes más busca a través de la aplicación :)</string>


    <!--Slider-->
    <string name="descripcionJuegoZombie">Primer juego diseñado en la aplicación de GameCrush, machaca a esos zombies antes de que se acabe el tiempo!</string>
    <string name="textoZombiesEliminados">0 zombies eliminados</string>

</resources>