<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblueZC"
    android:padding="10dp"
    tools:context=".aplicacionprincipal.Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:gravity="center"
        android:orientation="vertical">
        <!--Nombre de usuario del jugador-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/nombreUsuario"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--Email del jugador-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/emailUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/emailUsuario"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Contraseña del jugador-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passwordUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/passwordUsuario"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Fecha en la que se realiza el registro del jugador-->
        <TextView
            android:id="@+id/fechaRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/fechaRegistro"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/registrarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoBotonRegistro" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>