<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailLogin"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordLogin"
                android:inputType="textPassword"
                android:minHeight="48dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/botonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/botonLogin" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>