<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulvanta"
    tools:context=".aplicacionprincipal.PasswordOlvidada">


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/controlleryellow"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewPasswordOlvidada"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/botonRecuperacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/emailRecuperacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintPasswordOlvidada"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botonRecuperacion"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/azulOscuro"
        android:text="@string/botonPasswordOlvidada"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonRecuperacion"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>